--- a/.gitignore
+++ b/.gitignore
@@ -1,67 +1,18 @@
-# Environment variables
-.env
-.env.local
-.env.*.local
-
-# Python
 __pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-PIPFILE.lock
-
-# Virtual Environment
-venv/
-ENV/
+*.pyc
+.env
+.venv/
 env/
-.venv
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*.swn
+venv/
+*.egg-info/
+dist/
+build/
 .DS_Store
-*.sublime-project
-*.sublime-workspace
-
-# Testing
 .pytest_cache/
-.coverage
-htmlcov/
-.tox/
-
-# Database
-*.db
-*.sqlite
-*.sqlite3
-
-# Logs
+.idea/
+.vscode/
 *.log
-logs/
-
-# API Cache
-.cache/
-*.cache
-
-# Local
-local/
-temp/
-tmp/
+instance/
+.webassets-cache
+*.db
+.mypy_cache/
