--- a/render.yaml
+++ b/render.yaml
@@ -3,16 +3,11 @@ services:
     name: advanced-ai-api-server
     env: python
     region: oregon
-    plan: standard
-    numInstances: 2
-    autoDeploy: true
+    plan: free
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn -w 4 -k uvicorn.workers.UvicornWorker --timeout 60 --access-logfile - main:app"
+    startCommand: "gunicorn -w 4 -k uvicorn.workers.UvicornWorker main:app"
     envVars:
       - key: PYTHON_VERSION
-        value: "3.11"
+        value: 3.11
       - key: PORT
-        value: "8000"
-      - key: ENVIRONMENT
-        value: production
-    healthCheckPath: /health
+        value: 8000
