--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-pydantic==2.6.0
-python-dotenv==1.0.1
-requests==2.31.0
-gunicorn==21.2.0
+fastapi
+uvicorn
+gunicorn
+pydantic
+requests
